# CloudSec-Auditor

./: README.md  pyproject.toml
cloud_sec_auditor/: __init__.py
cloud_sec_auditor/analysis/: __init__.py  risk_analyzer.py
cloud_sec_auditor/core/: audit_logger.py  config.py  scope.py
cloud_sec_auditor/reporting/: html_exporter.py  report_builder.py
cloud_sec_auditor/scanners/: __init__.py  iam_scanner.py  logging_scanner.py  rds_scanner.py  s3_scanner.py  sg_scanner.py
cloud_sec_auditor/scoring/: __init__.py  cloud_scoring.py
cloud_sec_auditor/ui/: cli.py
tests/: test_audit_logger.py  test_cloud_scoring.py  test_iam_scanner.py  test_logging_scanner.py  test_rds_scanner.py  test_report_builder.py  test_risk_analyzer.py  test_s3_scanner.py  test_scope.py  test_sg_scanner.py
